--- a/portal-php/public_html/mockup/index.html
+++ b/portal-php/public_html/mockup/index.html
@@ -16,10 +16,15 @@
    <body>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
-      <nav class="navbar navbar-default navbar-static-top">
+      <nav class="navbar navbar-default">
          <div class="container">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            </button>
             <div class="navbar-header">
-               <a class="navbar-brand" href="#">i.gov.ua</a><br>
+               <a class="navbar-brand" href="#">i.gov.ua</a>
                <p class="sitename">Портал державних послуг</p>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -76,132 +81,132 @@
                <h3>Навколишнє середовище</h3>
                <ul class="list-unstyled">
                   <li><a href="#">Проведення експертизи проектно-кошторисної документації на створення багаторічних насаджень
-                     плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
-                  </li>
-                  <li><a href="#">Проведення повторної експертизи проектно-кошторисної документації на створення багаторічних насаджень
-                     плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю після доопрацювання</a>
-                  </li>
-                  <li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
-                  <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
-                  <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
-               </ul>
-               <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">15</span></a></p>
-            </div>
-            <div class="col-md-4">
-               <h3>Освіта і наука</h3>
-               <ul class="list-unstyled">
-                  <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
-                  <li><a href="#">Затвердження проекту для садіння винградників для виноробства</a></li>
-                  <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
-                  <li><a href="#">Проведення експертизи проектно-кошторисної документації на створення багаторічних насаджень
-                     плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
-                  </li>
-               </ul>
-               <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">8</span></a></p>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-md-4">
-               <h3>Культура та дозвілля</h3>
-               <ul class="list-unstyled">
-                  <li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
-                  <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
-                  <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
-                  <li><a href="#">Затвердження проекту для садіння винградників для виноробства</a></li>
-                  <li><a href="#">Затвердження вин контрольованих найменувань за походженням</a></li>
-               </ul>
-               <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">42</span></a></p>
-            </div>
-            <div class="col-md-4">
-               <h3>Охорона здоров'я та безпека</h3>
-               <ul class="list-unstyled">
-                  <li><a href="#">Проведення експертизи проектно-кошторисної документації на створення багаторічних насаджень
-                     плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
-                  </li>
-                  <li><a href="#">Проведення повторної експертизи проектно-кошторисної документації на створення багаторічних насаджень
-                     плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю після доопрацювання</a>
-                  </li>
-                  <li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
-                  <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
-                  <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
-               </ul>
-               <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">15</span></a></p>
-            </div>
-         </div>
-         <h1>Бізнесу</h1>
-         <div class="row">
-            <div class="col-md-4">
-               <h3>Житлове будівництво</h3>
-               <ul class="list-unstyled">
-                  <li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
-                  <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
-                  <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
-                  <li><a href="#">Затвердження проекту для садіння винградників для виноробства</a></li>
-                  <li><a href="#">Затвердження вин контрольованих найменувань за походженням</a></li>
-               </ul>
-               <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">42</span></a></p>
-            </div>
-            <div class="col-md-4">
-               <h3>Навколишнє середовище</h3>
-               <ul class="list-unstyled">
-                  <li><a href="#">Проведення експертизи проектно-кошторисної документації на створення багаторічних насаджень
-                     плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
-                  </li>
-                  <li><a href="#">Проведення повторної експертизи проектно-кошторисної документації на створення багаторічних насаджень
-                     плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю після доопрацювання</a>
-                  </li>
-                  <li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
-                  <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
-                  <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
-               </ul>
-               <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">15</span></a></p>
-            </div>
-            <div class="col-md-4">
-               <h3>Освіта і наука</h3>
-               <ul class="list-unstyled">
-                  <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
-                  <li><a href="#">Затвердження проекту для садіння винградників для виноробства</a></li>
-                  <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
-                  <li><a href="#">Проведення експертизи проектно-кошторисної документації на створення багаторічних насаджень
-                     плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
-                  </li>
-               </ul>
-               <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">8</span></a></p>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-md-4">
-               <h3>Культура та дозвілля</h3>
-               <ul class="list-unstyled">
-                  <li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
-                  <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
-                  <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
-                  <li><a href="#">Затвердження проекту для садіння винградників для виноробства</a></li>
-                  <li><a href="#">Затвердження вин контрольованих найменувань за походженням</a></li>
-               </ul>
-               <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">42</span></a></p>
-            </div>
-            <div class="col-md-4">
-               <h3>Охорона здоров'я та безпека</h3>
-               <ul class="list-unstyled">
-                  <li><a href="#">Проведення експертизи проектно-кошторисної документації на створення багаторічних насаджень
-                     плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
-                  </li>
-                  <li><a href="#">Проведення повторної експертизи проектно-кошторисної документації на створення багаторічних насаджень
-                     плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю після доопрацювання</a>
-                  </li>
-                  <li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
-                  <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
-                  <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
-               </ul>
-               <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">15</span></a></p>
-            </div>
-         </div>
+                  плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
+               </li>
+               <li><a href="#">Проведення повторної експертизи проектно-кошторисної документації на створення багаторічних насаджень
+               плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю після доопрацювання</a>
+            </li>
+            <li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
+            <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
+            <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
+         </ul>
+         <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">15</span></a></p>
       </div>
-      <footer class="footer">
-         <div class="container">
-            <p class="text-muted text-center"> i.gov.ua @ Зроблено ІТ-волонтерами України</p>
-         </div>
-      </footer>
-   </body>
+      <div class="col-md-4">
+         <h3>Освіта і наука</h3>
+         <ul class="list-unstyled">
+            <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
+            <li><a href="#">Затвердження проекту для садіння винградників для виноробства</a></li>
+            <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
+            <li><a href="#">Проведення експертизи проектно-кошторисної документації на створення багаторічних насаджень
+            плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
+         </li>
+      </ul>
+      <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">8</span></a></p>
+   </div>
+</div>
+<div class="row">
+   <div class="col-md-4">
+      <h3>Культура та дозвілля</h3>
+      <ul class="list-unstyled">
+         <li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
+         <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
+         <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
+         <li><a href="#">Затвердження проекту для садіння винградників для виноробства</a></li>
+         <li><a href="#">Затвердження вин контрольованих найменувань за походженням</a></li>
+      </ul>
+      <p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">42</span></a></p>
+   </div>
+   <div class="col-md-4">
+      <h3>Охорона здоров'я та безпека</h3>
+      <ul class="list-unstyled">
+         <li><a href="#">Проведення експертизи проектно-кошторисної документації на створення багаторічних насаджень
+         плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
+      </li>
+      <li><a href="#">Проведення повторної експертизи проектно-кошторисної документації на створення багаторічних насаджень
+      плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю після доопрацювання</a>
+   </li>
+   <li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
+   <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
+   <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
+</ul>
+<p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">15</span></a></p>
+</div>
+</div>
+<h1>Бізнесу</h1>
+<div class="row">
+<div class="col-md-4">
+<h3>Житлове будівництво</h3>
+<ul class="list-unstyled">
+   <li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
+   <li><a href="#">Затвердження нових марок виноробної продукції</a></li>
+   <li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
+   <li><a href="#">Затвердження проекту для садіння винградників для виноробства</a></li>
+   <li><a href="#">Затвердження вин контрольованих найменувань за походженням</a></li>
+</ul>
+<p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">42</span></a></p>
+</div>
+<div class="col-md-4">
+<h3>Навколишнє середовище</h3>
+<ul class="list-unstyled">
+   <li><a href="#">Проведення експертизи проектно-кошторисної документації на створення багаторічних насаджень
+   плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
+</li>
+<li><a href="#">Проведення повторної експертизи проектно-кошторисної документації на створення багаторічних насаджень
+плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю після доопрацювання</a>
+</li>
+<li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
+<li><a href="#">Затвердження нових марок виноробної продукції</a></li>
+<li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
+</ul>
+<p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">15</span></a></p>
+</div>
+<div class="col-md-4">
+<h3>Освіта і наука</h3>
+<ul class="list-unstyled">
+<li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
+<li><a href="#">Затвердження проекту для садіння винградників для виноробства</a></li>
+<li><a href="#">Затвердження нових марок виноробної продукції</a></li>
+<li><a href="#">Проведення експертизи проектно-кошторисної документації на створення багаторічних насаджень
+плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
+</li>
+</ul>
+<p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">8</span></a></p>
+</div>
+</div>
+<div class="row">
+<div class="col-md-4">
+<h3>Культура та дозвілля</h3>
+<ul class="list-unstyled">
+<li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
+<li><a href="#">Затвердження нових марок виноробної продукції</a></li>
+<li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
+<li><a href="#">Затвердження проекту для садіння винградників для виноробства</a></li>
+<li><a href="#">Затвердження вин контрольованих найменувань за походженням</a></li>
+</ul>
+<p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">42</span></a></p>
+</div>
+<div class="col-md-4">
+<h3>Охорона здоров'я та безпека</h3>
+<ul class="list-unstyled">
+<li><a href="#">Проведення експертизи проектно-кошторисної документації на створення багаторічних насаджень
+плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю</a>
+</li>
+<li><a href="#">Проведення повторної експертизи проектно-кошторисної документації на створення багаторічних насаджень
+плодових, ягідних, горіхоплідних, малопоширених культур, винограду та хмелю після доопрацювання</a>
+</li>
+<li><a href="#">Погодження використання зарубіжної технологічної документації</a></li>
+<li><a href="#">Затвердження нових марок виноробної продукції</a></li>
+<li><a href="#">Затвердження технологічних інструкцій та змін до них</a></li>
+</ul>
+<p><a class="btn btn-default" href="#" role="button">Всі послуги <span class="badge badge-info">15</span></a></p>
+</div>
+</div>
+</div>
+<footer class="footer">
+<div class="container">
+<p class="text-muted text-center"> i.gov.ua @ Зроблено ІТ-волонтерами України</p>
+</div>
+</footer>
+</body>
 </html>
