--- a/portal-php/public_html/mockup/journal.html
+++ b/portal-php/public_html/mockup/journal.html
@@ -18,6 +18,11 @@
 		<script src="js/bootstrap.min.js"></script>
 		<nav class="navbar navbar-default navbar-static-top">
 			<div class="container">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				</button>
 				<div class="navbar-header">
 					<a class="navbar-brand" href="#">i.gov.ua</a>
 					<br>
@@ -52,11 +57,11 @@
 					<h1>Мій журнал</h1>
 				</div>
 				<div class="col-md-4 col-md-offset-4 text-right">
-               <div class="ord-inner-addon">
-                  <span class="glyphicon glyphicon-search al-left" aria-hidden="true"></span>
-                  <input type="text" class="form-control" placeholder="Пошук">
-                  <a href="#"><span class="glyphicon glyphicon-triangle-bottom al-right" aria-hidden="true"></span></a>
-               </div>
+					<div class="ord-inner-addon">
+						<span class="glyphicon glyphicon-search al-left" aria-hidden="true"></span>
+						<input type="text" class="form-control" placeholder="Пошук">
+						<a href="#"><span class="glyphicon glyphicon-triangle-bottom al-right" aria-hidden="true"></span></a>
+					</div>
 				</div>
 			</div>
 		</div>
