--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -23,24 +23,25 @@
 
         <div ng-repeat="item in taskForm">
           <p ng-if="['string', 'long', 'date'].indexOf(item.type) > -1">
-            <label>{{item.name}}</label><!-- {{item.type}}-->
+              
+            <label>{{sFieldLabel(item.name)}}</label><!-- {{item.type}}-->
             <input class="form-control" ng-disabled="isFormPropertyDisabled(item)"
                    ng-required="item.required" ng-model="item.value"/>
           </p>
 
           <p ng-if="item.type == 'textArea'">
-            <label>{{item.name}}</label>
+            <label>{{sFieldLabel(item.name)}}</label>
         <textarea class="form-control" ng-disabled="isFormPropertyDisabled(item)"
                   ng-required="item.required" ng-model="item.value"></textarea>
           </p>
 
           <p ng-if="item.type == 'user'">
-            <label>{{item.name}}</label>
+            <label>{{sFieldLabel(item.name)}}</label>
             <input class="form-control" ng-disabled="true" ng-required="item.required" ng-model="item.value"/>
           </p>
 
           <p ng-if="item.type == 'enum'">
-            <label>{{item.name}}</label>
+            <label>{{sFieldLabel(item.name)}}</label>
             <select class="form-control" ng-disabled="isFormPropertyDisabled(item)"
                     ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in item.enumValues"
                     ng-required="item.required" ng-model="item.value"></select>
@@ -50,7 +51,7 @@
             <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content/{{item.nFileIdx}}" target="_blank"><!-- <b>{{item.name}}</b> {{item.description}} --></a>
           </p>
           <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea', 'file'].indexOf(item.type) == -1">
-            <label>{{item.name}}</label> <!-- {{item.type}} -->
+            <label>{{sFieldLabel(item.name)}}</label> <!-- {{item.type}} -->
             <input class="form-control" ng-disabled="true" ng-required="item.required" ng-model="item.value" />
           </p>
         </div>
