--- a/central-js2/client/index.html
+++ b/central-js2/client/index.html
@@ -1,70 +1,141 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-  <head>
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
+<head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge">
     <base href="/">
     <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="description"
+          content="">
+    <meta name="viewport"
+          content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
-      <!-- bower:css -->
-      <!-- endbower -->
+    <!-- bower:css -->
+    <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
-    <link rel="stylesheet" href="app/app.css">
-      <!-- injector:css -->
-      <!-- endinjector -->
+    <link rel="stylesheet"
+          href="app/app.css">
+    <!-- injector:css -->
+    <!-- endinjector -->
     <!-- endbuild -->
-  </head>
-  <body ng-app="centralJsApp">
-    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+</head>
+<body ng-app="centralJsApp">
 
-    <!-- Add your site or application content here -->
-    <div ui-view=""></div>
+<!-- End Google Tag Manager -->
+<!-- build:section layout.header -->
+<!-- /build -->
+<div ui-view="">
+    <div class="text-center">
+        <img class="text-center"
+             src="/img/loading.gif"
+             alt="Loading"/>
+    </div>
+</div>
+<!-- build:section layout.footer -->
+<!-- /build -->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-XXXXX-X');
-      ga('send', 'pageview');
-    </script>
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+<script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-    <!--[if lt IE 9]>
-    <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/json3/lib/json3.min.js"></script>
-    <![endif]-->
-    <!-- build:js({client,node_modules}) app/vendor.js -->
-      <!-- bower:js -->
-      <script src="bower_components/jquery/dist/jquery.js"></script>
-      <script src="bower_components/angular/angular.js"></script>
-      <script src="bower_components/angular-resource/angular-resource.js"></script>
-      <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-      <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-      <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-      <script src="bower_components/lodash/dist/lodash.compat.js"></script>
-      <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-      <!-- endbower -->
-    <!-- endbuild -->
+    ga('create', 'UA-XXXXX-X');
+    ga('send', 'pageview');
+</script>
 
-        <!-- build:js({.tmp,client}) app/app.js -->
-        <script src="app/app.js"></script>
-          <!-- injector:js -->
-          <script src="app/main/main.controller.js"></script>
-          <script src="app/main/main.js"></script>
-          <script src="components/modal/modal.service.js"></script>
-          <script src="components/navbar/navbar.controller.js"></script>
-          <!-- endinjector -->
-        <!-- endbuild -->
+<!--[if lt IE 9]>
+<script src="bower_components/es5-shim/es5-shim.js"></script>
+<script src="bower_components/json3/lib/json3.min.js"></script>
+<![endif]-->
+<!-- build:js({client,node_modules}) app/vendor.js -->
+<!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/angular-cookies/angular-cookies.js"></script>
+<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="bower_components/lodash/dist/lodash.compat.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
+
+<!-- build:js({.tmp,client}) app/app.js -->
+<script src="app/app.js"></script>
+<!-- injector:js -->
+<script src="app/404/script.js"></script>
+<script src="app/about/script.js"></script>
+<script src="app/activiti/script.js"></script>
+<script src="app/activiti/services/activiti.js"></script>
+<script src="app/bankid/factories/documents.js"></script>
+<script src="app/bankid/factories/passport.js"></script>
+<script src="app/bankid/script.js"></script>
+<script src="app/bankid/services/bankid.js"></script>
+<script src="app/components/dropdown/factories/dropdown.js"></script>
+<script src="app/components/select/directives/optionsClass.js"></script>
+<script src="app/components/typeahead/directives/typeaheadEmpty.js"></script>
+<script src="app/components/typeahead/factories/typeahead.js"></script>
+<script src="app/documents/controllers/states.js"></script>
+<script src="app/documents/script.js"></script>
+<script src="app/form/directives/file.js"></script>
+<script src="app/form/directives/file2.js"></script>
+<script src="app/form/directives/slotPicker.js"></script>
+<script src="app/form/factories/datepicker.js"></script>
+<script src="app/form/factories/file.js"></script>
+<script src="app/form/factories/formData.js"></script>
+<script src="app/form/factories/parameter.js"></script>
+<script src="app/index/controllers/states.js"></script>
+<script src="app/index/script.js"></script>
+<script src="app/index/services/catalog.js"></script>
+<script src="app/journal/controllers/states.js"></script>
+<script src="app/journal/script.js"></script>
+<script src="app/places/factories/localityList.js"></script>
+<script src="app/places/factories/regionList.js"></script>
+<script src="app/places/services/places.js"></script>
+<script src="app/service/built-in/controllers/built-in.js"></script>
+<script src="app/service/city/built-in/script.js"></script>
+<script src="app/service/city/controllers/states.js"></script>
+<script src="app/service/city/link/script.js"></script>
+<script src="app/service/city/script.js"></script>
+<script src="app/service/controllers/states.js"></script>
+<script src="app/service/country/built-in/script.js"></script>
+<script src="app/service/country/controllers/states.js"></script>
+<script src="app/service/country/link/script.js"></script>
+<script src="app/service/country/script.js"></script>
+<script src="app/service/link/controllers/link.js"></script>
+<script src="app/service/region/built-in/script.js"></script>
+<script src="app/service/region/controllers/states.js"></script>
+<script src="app/service/region/link/script.js"></script>
+<script src="app/service/region/script.js"></script>
+<script src="app/service/script.js"></script>
+<script src="app/service/services/admin.js"></script>
+<script src="app/service/services/auth/serviceAuthBlock.js"></script>
+<script src="app/service/services/messages.js"></script>
+<script src="app/service/services/places.js"></script>
+<script src="app/service/services/service.js"></script>
+<script src="components/modal/modal.service.js"></script>
+<script src="components/navbar/navbar.controller.js"></script>
+<!-- endinjector -->
+<!-- endbuild -->
 </body>
 </html>
