--- a/central-js/client/index.html
+++ b/central-js/client/index.html
@@ -141,8 +141,8 @@
 <script src="app/service/built-in/controllers/servicebuiltin.controller.js"></script>
 <script src="app/service/built-in/controllers/servicebuiltinbankid.controller.js"></script>
 <script src="app/service/catalog.js"></script>
-<script src="app/service/city/controllers/servicecity.controller.js"></script>
-<script src="app/service/city/controllers/servicecityabsent.controller.js"></script>
+<script src="app/service/city/controllers/serviceCity.controller.js"></script>
+<script src="app/service/city/controllers/serviceCityAbsent.controller.js"></script>
 <script src="app/service/city/link/script.js"></script>
 <script src="app/service/controllers/states.js"></script>
 <script src="app/service/country/built-in/script.js"></script>
@@ -152,9 +152,9 @@
 <script src="app/service/index/service.controller.js"></script>
 <script src="app/service/link/controllers/link.js"></script>
 <script src="app/service/region/built-in/script.js"></script>
-<script src="app/service/region/controllers/states.js"></script>
+<script src="app/service/region/controllers/serviceRegion.controller.js"></script>
 <script src="app/service/region/link/script.js"></script>
-<script src="app/service/region/script.js"></script>
+<script src="app/service/region/serviceRegion.states.js"></script>
 <script src="app/service/services/auth/serviceAuthBlock.js"></script>
 <script src="app/service/subcategory/subcategory.controller.js"></script>
 <!-- endinjector -->
