--- a/central-js/client/app/service/country/index.html
+++ b/central-js/client/app/service/country/index.html
@@ -1,5 +1,7 @@
-<div class="row">
-    <div class="col-md-12">
-        <div ui-view="content"></div>
-    </div>
+<div class="container">
+  <div class="row">
+      <div class="col-md-12">
+          <div ui-view="content"></div>
+      </div>
+  </div>
 </div>
