--- a/central-js/client/app/service/subcategory/subcategory.html
+++ b/central-js/client/app/service/subcategory/subcategory.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="row">
-            <h1 style="margin-bottom:-10px;margin-top:20px;">{{category.sName}}: {{subcategory.sName}}</h1>
+            <h3 class="subcategory_title">{{category.sName}}: {{subcategory.sName}}</h3>
         </div>
         <div class="col-md-4"
              ng-repeat-start="service in subcategory.aService | orderBy: '-nSub'">
