--- a/central-js/client/app/service/region/absent.html
+++ b/central-js/client/app/service/region/absent.html
@@ -40,53 +40,50 @@
                 <center style="margin-bottom:10px;">
                     <b><span class="text-center">Ви можете допомогти пришвидшити процес переведeння послуги в електронний вигляд:</span></b>
                 </center>
-                <table style="vertical-align:top;">
-                    <tr>
-                        <td style="vertical-align:top;width:50%;">
-                            Поділіться посиланням на цю сторінку в соціальних мережах із закликом підтримати ініціативу
-                            по переводу послуги в електронний вигляд.
-                            <br>
-                            <center>
-                                <div class="pluso"
-                                     style="margin-top:10px;"
-                                     data-background="transparent"
-                                     data-options="big,round,line,horizontal,counter,theme=04"
-                                     data-title="Закликаю владу перевести цю послугу в електронну форму! {{data.city.sName}} – {{service.sName}}"
-                                     data-description="{{data.city.sName}} – {{service.sName}}"
-                                     data-services="facebook,vkontakte,twitter">
-                                </div>
-                            </center>
-                        </td>
-                        <td style="vertical-align:top;width:50%;">
-                            Залиште свій email. Ми Вас поінформуємо, як тільки ця послуга буде доступна в електронному
-                            вигляді.
-                            <div style="margin-top:10px;"
-                                 class="col-md-12 text-center">
-                                <form name="absentMessageForm">
-                                    <input type="email"
-                                           data-ng-model="absentMessage.email"
-                                           name="email"
-                                           placeholder="Ваш email"
-                                           required
-                                           ng-keyup="emailKeydown()"/>
-                                    <input type="button"
-                                           data-ng-click="sendAbsentMessage(absentMessageForm, absentMessage)"
-                                           value="Зберегти"/>
-
-                                    <div role="alert"
-                                         ng-if="absentMessage.showErrors">
-                                        <span class="error"
-                                              ng-if="absentMessageForm.email.$error.required">Введіть Вашу email-адресу</span>
-                                        <span class="error"
-                                              ng-if="absentMessageForm.email.$error.email">Введіть коректну email адресу</span>
-                                    </div>
-                                </form>
+                <div class="row">
+                    <div class="col-md-6 col-sm-6">
+                        Поділіться посиланням на цю сторінку в соціальних мережах із закликом підтримати ініціативу
+                        по переводу послуги в електронний вигляд.
+                        <br>
+                        <center>
+                            <div class="pluso"
+                                 style="margin-top:10px;"
+                                 data-background="transparent"
+                                 data-options="big,round,line,horizontal,counter,theme=04"
+                                 data-title="Закликаю владу перевести цю послугу в електронну форму! {{data.city.sName}} – {{service.sName}}"
+                                 data-description="{{data.city.sName}} – {{service.sName}}"
+                                 data-services="facebook,vkontakte,twitter">
                             </div>
-                        </td>
-                    </tr>
-                </table>
-            </div>
+                        </center>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        Залиште свій email. Ми Вас поінформуємо, як тільки ця послуга буде доступна в електронному
+                        вигляді.
+                        <div style="margin-top:10px;"
+                             class="col-md-12 text-center">
+                            <form name="absentMessageForm">
+                                <input type="email"
+                                       data-ng-model="absentMessage.email"
+                                       name="email"
+                                       placeholder="Ваш email"
+                                       required
+                                       ng-keyup="emailKeydown()"/>
+                                <input type="button"
+                                       data-ng-click="sendAbsentMessage(absentMessageForm, absentMessage)"
+                                       value="Зберегти"/>
 
+                                <div role="alert"
+                                     ng-if="absentMessage.showErrors">
+                                    <span class="error"
+                                          ng-if="absentMessageForm.email.$error.required">Введіть Вашу email-адресу</span>
+                                    <span class="error"
+                                          ng-if="absentMessageForm.email.$error.email">Введіть коректну email адресу</span>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
